--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@types/node": "^18.8.1",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.2",
     "i18next": ">= 19.0.0",
